apps/app-client/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mdpus-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mdpus-client
  template:
    metadata:
      labels:
        app: mdpus-client
    spec:
      containers:
        - name: mdpus-client
          image: placeholder/app-client:latest
          ports:
            - containerPort: 3000
---
