apps/app-client/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-client
spec:
  selector:
    app: app-client
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
