apps/app-client/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mdpus-client-ingress
  annotations:
    cert-manager.io/cluster-issuer: acme-issuer
spec:
  ingressClassName: traefik-external
  rules:
    - host: placeholder-host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mdpus-client
                port:
                  number: 3000
  tls:
    - hosts:
        - placeholder-host
      secretName: mdpus-client-tls
